Fixed accordion responsiveness issue on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -509,6 +509,7 @@ i {
 		display: block;
 		margin: 0;
 		width: 100%;
+		max-width: none;
 	}
 
 	#information .infoblock h2 {
